Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50390

QAudioOutput: wrong state after resume() in push mode

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.6.0
    • 5.0.0, 5.1.0 , 5.2.0, 5.3.0, 5.4.0, 5.5.0
    • Multimedia
    • None

    Description

      Currently (in all backends and in the auto-test), when resuming in push mode, the audio output changes its state to ActiveState.

      However, the doc specifies:

      void QAudioOutput::resume()
      
      Resumes processing audio data after a suspend().
      
      Sets error() to QAudio::NoError. Sets state() to QAudio::ActiveState if you previously called start(QIODevice*). Sets state() to QAudio::IdleState if you previously called start(). emits stateChanged() signal.
      

      The doc behavior is the correct one, all backends and auto-test should be modified accordingly.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ylopes Yoann Lopes
            ylopes Yoann Lopes
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews