CoreAudio: fix QAudioOutput state after resume().

In push mode, the state must be IdleState after resume(), and only
change to ActiveState once it receives some data.

Task-number: QTBUG-50390
Change-Id: I4a38aa84a55e90d7a2db3e1d504674b2a688bbde
Reviewed-by: Pasi Petäjäjärvi <pasi.petajajarvi@theqtcompany.com>